--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ ARMAFLAGS = -larmadillo
 PTHREADFLAGS = -lpthread
 
 all:
-	$(LINK.cc) -g -O3 -o ahmm_mls ahmm_mls.cpp $(ARMAFLAGS) $(PTHREADFLAGS)
+	$(LINK.cc) -std=c++11 -g -O3 -o ahmm_mls ahmm_mls.cpp $(ARMAFLAGS) $(PTHREADFLAGS)
 ### if tcmalloc is installed, this can be linked using the command below instead
 #	$(LINK.cc) -O3 -o ahmm_mls ahmm_mls.cpp $(TCFLAGS) $(ARMAFLAGS) $(PTHREADFLAGS)
 
@@ -15,7 +15,7 @@ all:
 ## then you will have the appropriate lib and include files in your home directory under subdirectory miniconda3/
 ## so, replace USERNAME with your unix id on the following line and try this
 
-       #$(LINK.cc) -O3 -o ahmm_mls ahmm_mls.cpp -L /home/USERNAME/miniconda3/lib/ -I /home/USERNAME/miniconda3/include/ $(ARMAFLAGS) $(PTHREADFLAGS)
+#	$(LINK.cc) -O3 -o ahmm_mls ahmm_mls.cpp -L /home/nico/miniconda3/lib/ -I /home/nico/miniconda3/include/ $(ARMAFLAGS) $(PTHREADFLAGS)
       
 ## if it builds correctly, you will also need to link the library during runtime
 ## to do this, add the following line to your ~/.bash_profile or ~/.bashrc
